# blobrs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile  todo.md
.github/workflows/: ci.yml
examples/: simple_icon_test.rs
skills/tui-tester/: SKILL.md
src/: app.rs  event.rs  main.rs  preview.rs  terminal_icons.rs  ui.rs
