[package]
name = "blobrs"
version = "0.1.0"
description = "TUI for interacting with blob storage"
authors = ["Nate McIntosh <natemcintosh@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
object_store = { version = "0.12", features = ["azure"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
regex = "1.10"
